Schedule updated for 2022/2

--- a/index.html
+++ b/index.html
@@ -1,174 +1,183 @@
 <!DOCTYPE html>
-<html lang="en" >
+<html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>FG3 - Calendário</title>
   <link rel="stylesheet" href="./style.css">
 
 </head>
+
 <body>
-<!-- partial:index.partial.html -->
-<link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400' rel='stylesheet' type='text/css'>
+  <!-- partial:index.partial.html -->
+  <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400' rel='stylesheet' type='text/css'>
 
-<div id='container'>
+  <div id='container'>
 
-  <div class='widget'>
-    <div id='março' class="tab-content">
-      <table class="group-table">
-        <caption>MARÇO</caption>
-        <thead>
-          <th>Data</th>
-          <th>Atividades</th>
-        </thead>
-        <tbody>
-          <tr>
-            <td class="dias">07/03</td>
-            <td> Aula Síncrona</td>
-          </tr>
-          <tr>
-            <td class="dias">14/03</td>
-            <td></td>
-          </tr>
-          <tr>
-            <td class="dias">21/03</td>
-            <td>Aula Síncrona</td>
-          </tr>
-          <tr>
-            <td class="dias">28/03</td>
-            <td></td>
-          </tr>
-        </tbody>
-      </table>
+    <div class='widget'>
+      <div id='Agosto' class="tab-content">
+        <table class="group-table">
+          <caption>AGOSTO</caption>
+          <thead>
+            <th>Data</th>
+            <th>Atividades</th>
+          </thead>
+          <tbody>
+            <tr>
+              <td class="dias">15/08</td>
+              <td>Aula Normal</td>
+            </tr>
+            <tr>
+              <td class="dias">22/08</td>
+              <td>Aula Normal</td>
+            </tr>
+            <tr>
+              <td class="dias">29/08</td>
+              <td>Aula Normal</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
     </div>
-  </div>
 
-  <div class='widget'>
-    <div id='abril' class="tab-content">
-      <table class="group-table">
-        <caption>ABRIL</caption>
-        <thead>
-          <th>Data</th>
-          <th>Atividades</th>
-        </thead>
-        <tbody>
-          <tr>
-            <td class="dias">04/04</td>
-            <td> Aula Síncrona</td>
+    <div class='widget'>
+      <div id='Setembro' class="tab-content">
+        <table class="group-table">
+          <caption>SETEMBRO</caption>
+          <thead>
+            <th>Data</th>
+            <th>Atividades</th>
+          </thead>
+          <tbody>
+            <tr>
+              <td class="dias">05/09</td>
+              <td> Aula Normal</td>
 
-          </tr>
-          <tr>
-            <td class="dias">11/04</td>
-            <td> Aula Síncrona</td>
-          </tr>
-          <tr>
-            <td class="dias">18/04</td>
-            <td>Aula Síncrona / 1º teste (T1)</td>
+            </tr>
+            <tr>
+              <td class="dias">12/09</td>
+              <td> Aula Normal</td>
+            </tr>
+            <tr>
+              <td class="dias">19/09</td>
+              <td>Aula Normal</td>
 
-          </tr>
-          <tr>
-            <td class="dias">25/04</td>
-            <td>Aula Síncrona / 2º teste (T2)</td>
+            </tr>
+            <tr>
+              <td class="dias">26/09</td>
+              <td>Aula Normal</td>
 
-          </tr>
+            </tr>
 
-        </tbody>
-      </table>
+          </tbody>
+        </table>
+      </div>
     </div>
-  </div>
 
-  <div class='widget'>
-    <div id='maio' class="tab-content">
-      <table class="group-table">
-        <caption>MAIO</caption>
-        <thead>
-          <th>Data</th>
-          <th>Atividades</th>
-        </thead>
-        <tbody>
-          <tr>
-            <td class="dias">02/05</td>
-            <td> Aula Síncrona</td>
+    <div class='widget'>
+      <div id='Outubro' class="tab-content">
+        <table class="group-table">
+          <caption>OUTUBRO</caption>
+          <thead>
+            <th>Data</th>
+            <th>Atividades</th>
+          </thead>
+          <tbody>
+            <tr>
+              <td class="dias">03/10</td>
+              <td> 1ª Avaliação (P1)</td>
 
-          </tr>
-          <tr>
-            <td class="dias">09/05</td>
-            <td> 1ª Avaliação (P1)</td>
-          </tr>
-          <tr>
-            <td class="dias">16/05</td>
-            <td>1ª Reavaliação (R1)</td>
+            </tr>
+            <tr>
+              <td class="dias">10/10</td>
+              <td> Semana de planejamento/capacitação</td>
+            </tr>
+            <tr>
+              <td class="dias">17/10</td>
+              <td>1ª Reavaliação (R1)</td>
 
-          </tr>
-          <tr>
-            <td class="dias">23/05</td>
-            <td>Aula Síncrona </td>
+            </tr>
+            <tr>
+              <td class="dias">24/10</td>
+              <td>Aula Normal </td>
 
-          </tr>
-          <tr>
-            <td class="dias">30/05</td>
-            <td>Aula Síncrona</td>
+            </tr>
+            <tr>
+              <td class="dias">31/10</td>
+              <td>Aula Normal</td>
 
-          </tr>
-        </tbody>
-      </table>
+            </tr>
+          </tbody>
+        </table>
+      </div>
     </div>
-  </div>
 
-  <div class='widget'>
-    <div id='junho' class="tab-content">
-      <table class="group-table">
-        <caption>JUNHO</caption>
-        <thead>
-          <th>Data</th>
-          <th>Atividades</th>
-        </thead>
-        <tbody>
-          <tr>
-            <td class="dias">06/06</td>
-            <td> Aula Síncrona / 3º teste (T3)</td>
+    <div class='widget'>
+      <div id='Novembro' class="tab-content">
+        <table class="group-table">
+          <caption>NOVEMBRO</caption>
+          <thead>
+            <th>Data</th>
+            <th>Atividades</th>
+          </thead>
+          <tbody>
+            <tr>
+              <td class="dias">07/11</td>
+              <td> Aula Normal</td>
 
-          </tr>
-          <tr>
-            <td class="dias">13/06</td>
-            <td> Aula Síncrona / 4º teste (T4)</td>
-          </tr>
-          <tr>
-            <td class="dias">20/06</td>
-            <td>2ª Avaliação (P2)</td>
+            </tr>
+            <tr>
+              <td class="dias">14/11</td>
+              <td> Recesso (feriado)</td>
+            </tr>
+            <tr>
+              <td class="dias">21/11</td>
+              <td>Aula Normal</td>
 
-          </tr>
-          <tr>
-            <td class="dias">27/06</td>
-            <td>2ª Reavaliação (R2) </td>
+            </tr>
+            <tr>
+              <td class="dias">28/11</td>
+              <td>Aula Normal </td>
 
-          </tr>
-        </tbody>
-      </table>
+            </tr>
+          </tbody>
+        </table>
+      </div>
     </div>
-  </div>
 
-  <div class='widget'>
-    <div id='julho' class="tab-content">
-      <table class="group-table">
-        <caption>JULHO</caption>
-        <thead>
-          <th>Data</th>
-          <th>Atividades</th>
-        </thead>
-        <tbody>
-          <tr>
-            <td class="dias">04/07</td>
-            <td> Encerramento</td>
-        </tbody>
-      </table>
+    <div class='widget'>
+      <div id='Dezembro' class="tab-content">
+        <table class="group-table">
+          <caption>DEZEMBRO</caption>
+          <thead>
+            <th>Data</th>
+            <th>Atividades</th>
+          </thead>
+          <tbody>
+            <tr>
+              <td class="dias">05/12</td>
+              <td>2ª Avaliação (P2)</td>
+            </tr>
+            <tr>
+              <td class="dias">12/12</td>
+              <td> 2ª Reavaliação (R2) </td>
+            </tr>
+            <tr>
+              <td class="dias">19/12</td>
+              <td> Encerramento</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
     </div>
+
+
   </div>
-
-
-</div>
-<!-- End of container -->
-<!-- partial -->
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script><script  src="./script.js"></script>
+  <!-- End of container -->
+  <!-- partial -->
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+  <script src="./script.js"></script>
 
 </body>
+
 </html>
